        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4
      % Version 18
      _ 2016-xx-xx
      % Version 17
      _ 2016-05-14
      ! Important due to new Theme, your map widget may have to be moved once. Also note that all potential action as not been test, particularly an old domogik 0.2 & 0.3.
      * Reorganize menu order.
      * Remove useless list in house organisation.
      * Correct camera frame rate color.
      * Add icon in longclic widget menu.
      * #63 Remove map option zoom/drag from help.
      * Add number with DT_scaling show on top widgets in map mode.
      * In mapview hide top widget when longclick on map.
      * In mapview correct map height because of toolbar height.
      * In mapview correct map not displayed at top since fullscreen mode.
      * In mapview correct a problem for device of type number with commands.
      * In mapview correct a problem to display label even if no value.
      * In mapview correct a problem to display command of type DT_Scaling.
      * Correct a preferences screen toggle text
      * Restore Fullscreen theme for domodroid.
      * #32 Start working with AppCompat.
      * #24 Add NavigationDrawer to main and map.
      * #34 Rename a device directly to Domogik device description.
      * #34 Progress not correctly count while syncing.
      * Correct help crash in map mode.
      * Correct map mode bug with command number.
      * Close #98 Camera widget from map not working.
      * #96 SSL for Rest with Oauth too if used.
      * #38 ru from Transifex thank's to AXBOCT.
      * Disable stats for now.
      % Version 16
      _ 2016-04-07
      * New function to move up/down a widget to reorder widget display.