@@ -22,6 +22,8 @@
     $ 1.4
       % Version 18
       _ 2016-xx-xx
+      * #106 Disable start directly to map as it crash for now.
+      * Add a new logger lib (https://github.com/orhanobut/logger)
       % Version 17
       _ 2016-05-14
       ! Important due to new Theme, your map widget may have to be moved once. Also note that all potential action as not been test, particularly an old domogik 0.2 & 0.3.
